* [PR#32] Handle whitespace control in lexer in order to avoid a ugly hack and Pcre use.
o [PR#31] Added Tarray type.
o [PR#33] Fixed lexer line update, better error message, fail on unclosed statements.
o [PR#28] Added Tpat data structure: object base on string pattern matching.
o [PR#34] Added Tlazy constructor.
o [PR#36] Added Tvolatile contructor.

version: 1.2.17, 2018-07-03
===========================
o [PR#25] Add keywords 'and', 'or', 'elif'.
* [PR#26] Make the lexer reject input when a keyword is expected but not found.

version: 1.2.16, 2017-11-15
===========================
! [PR#24] Drop support for 3.x because -safe-string(compiler option) is used by default since OCaml>=4.06.0.

version: 1.2.15, 2017-07-24
===========================
* [ISSUE#23] Treat invalid iterable object as empty list.

version: 1.2.14, 2016-12-16
===========================
o Update cheatsheet.tmpl(Add more '{% block %} ~ {% endblock %}' example code).
! Use labeled arguments for Jg_stub.add_func, Jg_stub.get_func.
* Remove unused func and types.
* [PR#21] Install .cmx files.
* [PR#22] Add support for iterating over Tobj and Thash data.

version: 1.2.13, 2016-05-10
===========================
! [PR#20] Replace batteries to uutf.

version: 1.2.12, 2015-12-05
===========================
* Use $(MAKE) instead of hard-coded make(PR#18) to support OSX and BSD via opam.

version: 1.2.11, 2015-12-03
===========================
* If native compiler is not supported, bytecode library is automatically selected by opam(Issues#16, PR#17).

version: 1.2.10, 2015-10-11
===========================
o Allow arbitrary expressions in object lookups(PR#15).

version: 1.2.7, 2015-04-12
==========================
! switch lib(extlib -> batteries).

version: 1.2.6, 2014-08-14
==========================
! deplicated compiled mode.
o support symbol include like {% include some_var %}, {% rawinclude some_var %}.

version: 1.2.5, 2014-08-01
==========================